# tha-wright-stuff

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: auto-assign-pr.yml  bump-dep-floors.yml  ci.yml  dep-floors-check.yml  dependabot-auto-merge.yml  publish.yml
src/tha_wright_stuff/: __init__.py
tests/: test_imports.py
