[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tha-wright-stuff"
version = "0.1.17"
description = "A Tabular Helper meta-package that bundles the full tha-* library family in a single install."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Nate Wright" }]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Typing :: Typed",
]
keywords = ["tabular", "helper", "api", "csv", "aws", "edfi", "google", "snowflake", "utilities", "meta"]
dependencies = [
    "tha-csv-runner>=0.3.3",
    "tha-map-runner>=0.2.9",
    "tha-req-runner[httpx]>=0.2.3",
    "tha-aws-runner>=0.2.5",
    "tha-utils-helper>=0.2.5",
    "tha-edfi-runner>=0.1.5",
    "tha-google-runner>=0.1.7",
    "tha-snowflake-runner>=0.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.17",
    "mypy>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/tha-guy-nate/tha-wright-stuff"
Issues = "https://github.com/tha-guy-nate/tha-wright-stuff/issues"
Changelog = "https://github.com/tha-guy-nate/tha-wright-stuff/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/tha_wright_stuff"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
